--- a/src/components/header/navigation.pug
+++ b/src/components/header/navigation.pug
@@ -11,10 +11,20 @@ nav.navigation
                 a(href="#").menu-item-text Реклама
             li.menu-item.openable
                 a(href="#").menu-item-text Онлайн
+                ul.menu-item__open 
+                    li.menu-item__open__li 
+                        a(href="#") Онлайн
+                    li.menu-item__open__li 
+                        a(href="#")  Офлайн
             li.menu-item
                 a(href="#").menu-item-text Программа передач
             li.menu-item.openable
                 a(href="#").menu-item-text Ещё 
+                ul.menu-item__open 
+                    li.menu-item__open__li 
+                        a(href="#")  Ещё
+                    li.menu-item__open__li 
+                        a(href="#")  Харош
     ul.social-media.navigation__social-media
         li.social-media-item
             p.social-media-item-text Подписывайтесь на нас:
