--- a/src/components/one-news/news/news.pug
+++ b/src/components/one-news/news/news.pug
@@ -1,37 +1,40 @@
 section.one-news
-    div.wrapper
+    .wrapper
         h3 Госпитальная база закрыта, учреждение вернётся в «доковидный» режим после дезинфекции. Роддом Златоуста вновь откроет свои двери 8 февраля
-        div.path 
+        .path 
             a(href="#").path__item Главная /
             a(href="#").path__item Новости /
             a(href="#").path__item Медицина
 
-        div.news__content
-            div.news__content__header
-                div.tag Медицина
-                div.date 29/01/2021
-            div.news__content_main
+        .news__content
+            .news__content__header
+                .tag Медицина
+                .date 29/01/2021
+            .news__content_main
                 h4 Ещё одна главная новость дня — с 8 февраля златоустовский роддом возвращается к привычному формату работы. Госпитальную базу для лечения больных коронавирусной инфекцией переводят в профильный режим. Приказ Министерство здравоохранения Челябинской области выпустило 27 января.
                 p Напомним, перепрофилировать родильный дом решили в связи с ежедневным большим приростом златоустовцев, заболевших ковид-19. За это время лечение на госпитальной базе прошли свыше 1000 пациентов.
-                img(src="", alt="видео с новостью")
-                b Александр Дорофеев
-                span главный врач родильного дома г. Златоуста:
+                p 
+                    img(src="img/pages/main/fresh-news/cards/img4.svg", alt="видео с новостью") 
+                p  
+                    b Александр Дорофеев
+                    br
+                    span главный врач родильного дома г. Златоуста:
                 p «На сегодняшний день в МПЦ находятся 46 больных. Большая часть из них будет переведена на базу квартала Медик и меньшая часть – на базу долечивания, в район метзавода. В воскресенье к нам приезжает дезостанция для обработки всех помещений. С 1 по 7 число проводится заключительная дезинфекция всего родильного дома. С 8 числа мы начинаем принимать беременных и рожениц нашего города и горнозаводской зоны».
                 p Подготовка к возвращению профильной деятельности больниц проводится тщательным образом. Это полная дезинфекция помещений, забор ряда лабораторных анализов. И только после разрешения всех инстанций медицинское учреждение поступает к работе. Златоуст — не единственный город, где в связи со стабилизацией обстановки с коронавирусной инфекцией медицинские объекты возвращаются к плановому приёму пациентов. Решение по сокращению коечных мест для больных ковидом принимается оперативным штабом по борьбе с коронавирусной инфекцией при Правительстве Челябинской области. Оставшиеся ковид-базы перейдут в прежний режим работы при условии улучшения ситуации.
                 
-            div.news__content__footer
-                div.author
-                    div.author__text Автор материала
-                    div.author__name Иван Анатольев 
-                div.tags 
-                    div.tags__text Теги
+            .news__content__footer
+                .author
+                    .author__text Автор материала
+                    .author__name Иван Анатольев 
+                .tags 
+                    .tags__text Теги
                     ul.tags__list
                         li.tags__list__item Роддом / 
                         li.tags__list__item Вакцинация /
                         li.tags__list__item Коронавирус
-                div.share 
-                    div.share__text Поделиться
-                    div.share__img-list
+                .share 
+                    .share__text Поделиться
+                    .share__img-list
                         img.share__img-list__item(src='img/social-media/youtube.svg')
                         img.share__img-list__item(src='img/social-media/facebook.svg')
                         img.share__img-list__item(src='img/social-media/vk.svg')
