--- a/src/pug/one-news.pug
+++ b/src/pug/one-news.pug
@@ -5,9 +5,14 @@ html(lang="ru")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         title Одна новость
         link(rel="stylesheet" href="main.css")
+        link(rel="stylesheet", href="https://fonts.googleapis.com")
+        link(rel="stylesheet", href="https://fonts.gstatic.com" crossorigin)
+        link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300..900&display=swap")
+        
     body 
 
         include ../components/header/header.pug
         include ../components/one-news/news/news.pug  
+        include ../components/one-news/comments/comments.pug  
         
         include ../components/footer/footer.pug
