--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,19 +1,26 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Frank, sans-serif;
+    // font-family: "Frank Ruhl Libre", serif;
+    // font-optical-sizing: auto;
+    // font-weight: weight;
+    // font-style: normal;
 }
-body{
+
+body {
     background-color: #F2F2F2;
 
 }
+
 .wrapper {
     max-width: 1504px;
-    margin: 0 auto; 
+    margin: 0 auto;
 }
+
 @media only screen and (max-width: 320px) {
-    .wrapper{
+    .wrapper {
         padding: 0 20px
     }
 }
+
 @import './***/**/*.scss';
