--- a/src/sass/pages/all-news/news.scss
+++ b/src/sass/pages/all-news/news.scss
@@ -1,3 +1,4 @@
+@import "../../date.scss";
 .path {
     margin-bottom: 55px;
 
@@ -20,11 +21,24 @@
         margin-bottom: 83px;
         display: flex;
         gap: 50px;
+        align-items: center;
 
         &-date {}
 
         &-rubric {
             option {}
+        }
+        .date_containet, 
+        .select_container{
+            .webix_view.webix_form{
+                background-color: none;
+            }
+        }
+        .date_containet{
+
+        }
+        .select_container{
+
         }
     }
 
@@ -72,6 +86,9 @@
         height: 12px;
         background-image: url("img/all-news/pagination-img.svg");
         cursor: pointer;
+        &:hover{
+            filter: brightness(0.1);
+        }
     }
 
     &__next {
@@ -90,6 +107,11 @@
             font-size: 20px;
             color: #373334;
             cursor: pointer;
+            &:hover{
+                text-decoration: underline 2px solid red;
+            }
         }
     }
 }
+
+
