--- a/src/sass/pages/main/vector/vector.scss
+++ b/src/sass/pages/main/vector/vector.scss
@@ -50,10 +50,16 @@
     }
 
     &__content {
-        display: flex;
-        gap: 47px; 
         padding-bottom: 85px;
-        overflow: hidden;
+        .swiper {
+            &-slide{
+                max-width: 440px;
+                height: auto;
+                img {
+                }
+            }
+        }
+        
     }
 }
 @media only screen and (max-width: 320px) {
